fix: fix title on small screen

--- a/src/components/PageTitle/PageTitle.module.scss
+++ b/src/components/PageTitle/PageTitle.module.scss
@@ -9,4 +9,8 @@
   color: $font-white;
   text-shadow: 0px 1px 1px $font-black;
   text-align: center;
+
+  @media (max-width: 450px) {
+    font-size: 30px;
+  }
 }
